# self-contained-draft

./: AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
src/self_contained_draft/: __init__.py  build.py  cli.py  figures.py  flatten.py  latex.py  macros.py  processor.py  properties.py  refs.py  support_files.py
tests/: test_acceptance.py  test_build.py  test_figures.py  test_flatten.py  test_latex.py  test_macros.py  test_package.py  test_properties.py  test_refs.py  test_support_files.py
